remove Derkutils dependency