@@ -1,6 +1,7 @@
 package com.namelessmc.plugin.common;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.http.HttpClient;
 import java.time.Duration;
@@ -19,8 +20,6 @@ import com.namelessmc.java_api.exception.UnknownNamelessVersionException;
 import com.namelessmc.plugin.common.command.AbstractScheduler;
 import com.namelessmc.plugin.common.logger.AbstractLogger;
 
-import xyz.derkades.derkutils.Tristate;
-
 public class ApiProvider implements Reloadable {
 
 	private static final String USER_AGENT = "Nameless-Plugin/"	 + MavenConstants.PROJECT_VERSION;
@@ -29,7 +28,8 @@ public class ApiProvider implements Reloadable {
 	private final AbstractLogger logger;
 	private final ConfigurationHandler config;
 
-	private Tristate<NamelessAPI> cachedApi;
+	private	boolean apiIsCached;
+	private @Nullable NamelessAPI api;
 
 	private @Nullable URL apiUrl;
 	private @Nullable String apiKey;
@@ -44,12 +44,14 @@ public class ApiProvider implements Reloadable {
 		this.scheduler = scheduler;
 		this.logger = logger;
 		this.config = config;
-		this.cachedApi = Tristate.unknown();
+		this.api = null;
+		this.apiIsCached = false;
 	}
 
 	@Override
 	public void unload() {
-		this.cachedApi = Tristate.unknown();
+		this.apiIsCached = false;
+		this.api = null;
 		this.apiUrl = null;
 		this.apiKey = null;
 		this.timeout = null;
@@ -61,7 +63,7 @@ public class ApiProvider implements Reloadable {
 		try {
 			final String rawUrl = config.node("url").getString();
 			if (rawUrl != null ) {
-				this.apiUrl = new URL(rawUrl);
+				this.apiUrl = URI.create(rawUrl).toURL();
 			}
 		} catch (final MalformedURLException e) {
 			this.logger.severe("You have entered an invalid API URL. Please get an up-to-date API URL from StaffCP > " +
@@ -86,29 +88,31 @@ public class ApiProvider implements Reloadable {
 
 	@Deprecated
 	public @Nullable String isApiWorkingMetric() {
-		if (!this.cachedApi.known()) {
+		if (!this.apiIsCached) {
 			// In theory the API should always be cached, but in case it's not we
 			// do not want to force load it because that would affect server performance.
 			return "Unknown";
 		}
 
-		return this.cachedApi.present() ? "Working" : "Not working";
+		return this.api != null ? "Working" : "Not working";
 	}
 
 	public synchronized @Nullable NamelessAPI api() {
-		if (this.cachedApi.known()) {
-			return this.cachedApi.value();
+		if (this.apiIsCached) {
+			return this.api;
 		}
 
 		if (this.apiUrl == null || this.apiKey == null || this.apiKey.isEmpty()) {
 			this.logger.severe("You have not entered an API URL and API key in the config or the API URL or " +
 					"API key is invalid. Please get your site's API URL and API key from " +
 					"StaffCP > Configuration > API and reload the plugin.");
-			this.cachedApi = Tristate.knownEmpty(); // This won't be resolved without reloading, we don't have to retry.
+			// This won't be resolved without reloading, we don't have to retry.
+			this.api = null;
+			this.apiIsCached = true;
 		} else {
 			try {
 				final NamelessApiBuilder builder = NamelessAPI.builder(this.apiUrl, this.apiKey)
-						.userAgent(USER_AGENT)
+						.userAgent(ApiProvider.USER_AGENT)
 						.customDebugLogger(this.debug ? this.logger.getApiLogger() : null)
 						.timeout(this.timeout);
 
@@ -121,43 +125,49 @@ public class ApiProvider implements Reloadable {
 				final Website info = api.website();
 				if (this.bypassVersionCheck) {
 					this.logger.warning("Bypassing version checks, use at your own risk!");
-					this.cachedApi = Tristate.known(api); // Cache working API
+					this.api = api; // Cache working API
+					this.apiIsCached = true;
 				} else {
 					try {
 						final NamelessVersion version = info.parsedVersion();
 						if (NamelessVersion.isSupportedByJavaApi(version)) {
 							this.logger.fine("Website connection appears to be working.");
-							this.cachedApi = Tristate.known(api); // Cache working API
+							this.api = api; // Cache working API
+							this.apiIsCached = true;
 						} else {
 							this.logger.severe("Your website runs a version of NamelessMC (" + version + ") that is not supported by this " +
 									"version of the plugin. Please update your NamelessMC website and/or the plugin.");
-							this.cachedApi = Tristate.knownEmpty(); // No need to retry, cache that it's not working
+							this.api = null; // No need to retry, cache that it's not working
+							this.apiIsCached = true;
 						}
 					} catch (final UnknownNamelessVersionException ignored) {
 						this.logger.severe("The plugin doesn't recognize the NamelessMC version you are using. Ensure you are running a " +
-								"recent version of the plugin and NamelessMC v2. If no updated version is available, you can bypass " + 
+								"recent version of the plugin and NamelessMC v2. If no updated version is available, you can bypass " +
 								"the version check at your own risk by adding `bypass-version-check: true` in the api section in main.yml.");
-						this.cachedApi = Tristate.knownEmpty(); // Probably won't resolve on its own, cache until reload
+						this.api = null; // Probably won't resolve on its own, cache until reload
+						this.apiIsCached = true;
 					}
 				}
 			} catch (final NamelessException e) {
 				this.logger.logException(e);
 
 				if (e instanceof ApiException) {
-					this.cachedApi = Tristate.knownEmpty(); // This won't be resolved without reloading, we don't have to retry.
+					this.api = null; // This won't be resolved without reloading, we don't have to retry.
+					this.apiIsCached = true;
 				} else {
 					// Do not cache, so it immediately tries again the next time. These types of errors may fix on their
 					// own, so we don't want to break the plugin until the administrator reloads.
-					this.cachedApi = Tristate.unknown();
+					this.api = null;
+					this.apiIsCached = true;
 				}
 			}
 		}
 
-		return this.cachedApi.value();
+		return this.api;
 	}
 
 	public @Nullable NamelessAPI apiIfCached() {
-		return this.cachedApi.present() ? this.cachedApi.value() : null;
+		return this.apiIsCached ? this.api : null;
 	}
 
 }
